# gTorrent

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.h  libtorrent_gsource.cc  ltsource.cc  ltsource.h  main.cc  resources.xml  ui.cc  util.cc  util.h  window.ui
src/: CMakeLists.txt  TorrentListRow.cc  TorrentListRow.h  TorrentListWidget.cc  TorrentListWidget.h  app.h  ltsource.cc  ltsource.h  ui.cc  util.h
src/ui/: window.ui
